Fix: Image sizing on mobile pt 2

--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,7 @@ img {
     max-width: 800px;
     max-height: 600px;
 }
+
+@media all and (max-width: 768px) {   
+        img {width: 100%;}
+}
